# pysetmeup

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  conftest.py  pyproject.toml  run.sh  tasks.py
src/pysetmeup/: __init__.py  linuxbrew.py  user.py
src/pysetmeup/connectors/: lima.py
src/pysetmeup/helpers/: github.py  lima_ssh.py
src/pysetmeup/parts/: __init__.py  bashrc_d_directory.py  direnv.py  epel.py  fish.py  fzf.py  gh.py  git.py  lvm.py  mosh.py  rclone.py  unzip.py  uv.py  vi_mode_bash.py  yq.py
src/pysetmeup/setups/: basicdev.py  rhel.py
tests/: test_docker.py
